src/components/header.less
@header-logo-height: @padding-larger;

.sv-header {
  display: flex;
  flex-shrink: 0;
  align-items: center;
  padding: @padding-smaller @padding-base;
  border-bottom: 1px solid @brand-primary;
  box-shadow: 0 1px @shadow-dark;
  background-color: @gray-dark;
  position: relative;
  .sv-header-logo {
    height: @header-logo-height;
  }
  .sv-header-nav {
    flex-grow: 1;
    margin-left: @padding-large;
    .sv-button:not(:last-child) {
      margin-right: @padding-smaller;
    }
  }
  .sv-header-project {
    display: flex;
    justify-content: flex-end;
    flex-shrink: 0;
    border: 1px solid @shadow;
    border-radius: @border-radius-small;
    background-color: @gray-darker;
    overflow: hidden;
    input[type="text"] {
      padding: 0 @padding-base;
      padding-right: @padding-largest;
      border: 0;
      color: @gray-lightest;
      background: none;
      cursor: text;
      &:hover {
        color: mix(@gray-lightest, white);
      }
      &:focus {
        box-shadow: inset 1px 0 @brand-primary;
        color: white;
        outline: none;
      }
    }
    .sv-button {
      margin: @padding-smaller;
      margin-left: 0;
      font-weight: 600;
      color: @gray-darker;
      background-color: @brand-primary;
      &:hover, &:focus {
        background-color: darken(@brand-primary, 5%);
      }
      &:active {
        background-color: darken(@brand-primary, 10%);
      }
      &.sv-header-project-save span {
        display: inline-block;
        line-height: 1em;
        &:not(:first-child) {
          margin-left: @padding-smallest;
          font-size: @font-size-smaller;
          color: mix(@gray, @brand-primary);
        }
      }
    }
    .sv-header-project-status {
      margin: @padding-smaller @padding-small;
      text-align: right;
      &.sv-not-saved, &.sv-nothing-to-save {
        span:first-child {
          color: @gray-lighter;
        }
      }
      &.sv-unsaved-changes span:first-child {
        color: @brand-primary;
      }

      span {
        display: block;
        font-size: @font-size-smaller;
        line-height: 1rem;
        white-space: nowrap;
      }
    }
  }
}

